# Mahir-s-Webapp

./: README.md  app.py  pyproject.toml  requirements.txt
static/: styles.css
templates/: index.html  template.html  ticker.html  ticker_details.html  ticker_list.html
